Moved grid layout margin and spacing fixes from reindeer to base theme #9559

--- a/WebContent/VAADIN/themes/reindeer/layouts/layouts.scss
+++ b/WebContent/VAADIN/themes/reindeer/layouts/layouts.scss
@@ -34,24 +34,7 @@
 	height: 7px;
 	width: 6px;
 }
-/* Different for historical reasons: previously was inherited directly from Base theme */
-/* TODO unify these values in version 7 */
-.v-gridlayout.v-layout-margin-top {
-	padding-top: 24px;
-}
-.v-gridlayout.v-layout-margin-bottom {
-	padding-bottom: 24px;
-}
-.v-gridlayout.v-layout-margin-left {
-	padding-left: 24px;
-} 
-.v-gridlayout.v-layout-margin-right {
-	padding-right: 24px;
-}
-.v-gridlayout .v-layout-spacing-on {
-	padding-left: 12px;
-	padding-top: 12px;
-}
+
 /* Blue background */
 .v-verticallayout-blue,
 .v-horizontallayout-blue,
